[tool.poetry]
name = "roadrate"
version = "0.1.0"
description = ""
authors = ["dmitry.finko <dmit.finn@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.3"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
